# iganet-stokes

./: CMakeLists.txt  README.md
filedata/domain1d/: line.xml  line_boundary.xml
filedata/domain2d/: square.xml  square_boundary.xml
filedata/domain3d/: GshapedVolume.xml  cube_boundary.xml
filedata/domain4d/: hypercube_boundary.xml
filedata/surfaces/: g_plus_s_surf.xml
filedata/surfaces/2d/: geo01.xml  geo02.xml  geo03.xml  geo04.xml  geo05.xml  geo06.xml  geo07.xml  geo08.xml  geo09.xml  geo10.xml  geo11.xml  geo12.xml  geo13.xml  geo14.xml  geo15.xml  geo16.xml  geo17.xml  geo18.xml  geo19.xml  geo20.xml  quadCircleNUB_ref.xml
filedata/surfaces/2d_quadCircleImp/: quadCircleImpR05I02_resultR1E1Fixed.xml  quadCircleImpR05I03_resultR1E1Fixed.xml  quadCircleImpR05I04_resultR1E1Fixed.xml  quadCircleImpR05I05_resultR1E1Fixed.xml  quadCircleImpR075I02_resultR1E1Fixed.xml  quadCircleImpR075I03_resultR1E1Fixed.xml  quadCircleImpR075I04_resultR1E1Fixed.xml  quadCircleImpR075I05_resultR1E1Fixed.xml  quadCircleImpR125I02_resultR1E1Fixed.xml  quadCircleImpR125I03_resultR1E1Fixed.xml  quadCircleImpR125I04_resultR1E1Fixed.xml  quadCircleImpR125I05_resultR1E1Fixed.xml  quadCircleImpR15I02_resultR1E1Fixed.xml  quadCircleImpR15I03_resultR1E1Fixed.xml  quadCircleImpR15I04_resultR1E1Fixed.xml  quadCircleImpR15I05_resultR1E1Fixed.xml  quadCircleImpR1I02_resultR1E1Fixed.xml  quadCircleImpR1I03_resultR1E1Fixed.xml  quadCircleImpR1I04_resultR1E1Fixed.xml  quadCircleImpR1I05_resultR1E1Fixed.xml
filedata/surfaces/2d_quadCircleImp_test/: quadCircleImpR04I015_resultR1E1Fixed.xml  quadCircleImpR04I055_resultR1E1Fixed.xml  quadCircleImpR06I025_resultR1E1Fixed.xml  quadCircleImpR06I035_resultR1E1Fixed.xml  quadCircleImpR06I045_resultR1E1Fixed.xml  quadCircleImpR08I025_resultR1E1Fixed.xml  quadCircleImpR08I035_resultR1E1Fixed.xml  quadCircleImpR08I045_resultR1E1Fixed.xml  quadCircleImpR11I025_resultR1E1Fixed.xml  quadCircleImpR11I035_resultR1E1Fixed.xml  quadCircleImpR11I045_resultR1E1Fixed.xml  quadCircleImpR14I025_resultR1E1Fixed.xml  quadCircleImpR14I035_resultR1E1Fixed.xml  quadCircleImpR14I045_resultR1E1Fixed.xml  quadCircleImpR16I015_resultR1E1Fixed.xml  quadCircleImpR16I055_resultR1E1Fixed.xml
filedata/surfaces/2d_quadCircle_degree34/: quadCircleImp_R1I04_resultR1E2Fixed.xml
filedata/surfaces/2d_quadCircle_variableRadius/: quadCircleR05I02_resultR1E1Fixed.xml  quadCircleR05I03_resultR1E1Fixed.xml  quadCircleR05I04_resultR1E1Fixed.xml  quadCircleR05I05_resultR1E1Fixed.xml  quadCircleR075I02_resultR1E1Fixed.xml  quadCircleR075I03_resultR1E1Fixed.xml  quadCircleR075I04_resultR1E1Fixed.xml  quadCircleR075I05_resultR1E1Fixed.xml  quadCircleR125I02_resultR1E1Fixed.xml  quadCircleR125I03_resultR1E1Fixed.xml  quadCircleR125I04_resultR1E1Fixed.xml  quadCircleR125I05_resultR1E1Fixed.xml  quadCircleR15I02_resultR1E1Fixed.xml  quadCircleR15I03_resultR1E1Fixed.xml  quadCircleR15I04_resultR1E1Fixed.xml  quadCircleR15I05_resultR1E1Fixed.xml  quadCircleR1I02_resultR1E1Fixed.xml  quadCircleR1I03_resultR1E1Fixed.xml  quadCircleR1I04_resultR1E1Fixed.xml  (+1 more)
src/: CMakeLists.txt  README.md  demo.cxx  iganet.cxx  iganet_fitting.cxx  iganet_fitting_autotune.cxx  iganet_fitting_geometry.cxx  iganet_fitting_geometry_autotune.cxx  iganet_fitting_geometry_dataloader.cxx  iganet_fitting_geometry_dataloader_autotune.cxx  iganet_fitting_geometry_simple.cxx  iganet_fitting_quadCircle.cxx  iganet_fitting_quadCircle_dataloader.cxx  iganet_fitting_quadCircle_simple.cxx  iganet_fitting_simple.cxx  iganet_fitting_simply.cxx  iganet_load_eval.cxx  iganet_poisson.cxx  iganet_poisson_quadCirc.cxx  iganet_poisson_quadCircle.cxx  iganet_stokes.cxx  iganet_stokes_square.cxx  nonuniform_bsplines.cxx  quadCircle_surface_gismo.cxx  quadCircle_surface_io.cxx  uniform_bspline_surface_gismo.cxx  uniform_bspline_surface_io.cxx  uniform_bsplines.cxx
(+983 files in other folders)
